// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "idl/model";
option java_multiple_files = true;
option java_package = "io.grpc.chat";
option java_outer_classname = "ChatHandler";

package model;

import "chat-domain.proto";

service Chat {
  rpc EventListen(Request) returns (stream Receive) {}
  rpc ChatWith(Request) returns (ResponseWithError) {}
  rpc SendMessage(Request) returns (ResponseWithError) {}
  rpc GetUsers(Request) returns (ResponseWithError) {}
  rpc GetRooms(Request) returns (ResponseWithError) {}
  rpc ChatIn(Request) returns (ResponseWithError) {}
  rpc ChatOut(Request) returns (ResponseWithError) {}
  rpc GetMessages(Request) returns (ResponseWithError) {}
  rpc ReceiveAck(Request) returns (ResponseWithError) {}
  rpc ReadAck(Request) returns (ResponseWithError) {}
}

service ChatRoute {
  rpc Delivery(DeliveryRequest) returns (DeliveryResponseWithError) {}
}

message Error {
  string code = 1;
  string result = 2;
}

// The response message containing the result
message ResponseWithError{
  Error error = 1;
  Response resp = 2;
}

message DeliveryResponseWithError{
  Error error = 1;
  DeliveryResponse resp = 2;
}
